1.0a4 (2009-06-25)
==================

Features
--------

- Cause ``:segment`` matches in route paths to put a Unicode-decoded
  and URL-dequoted value in the matchdict for the value matched.
  Previously a non-decoded non-URL-dequoted string was placed in the
  matchdict as the value.

- Cause ``*remainder`` matches in route paths to put a *tuple* in the
  matchdict dictionary in order to be able to present Unicode-decoded
  and URL-dequoted values for the traversal path.  Previously a
  non-decoded non-URL-dequoted string was placed in the matchdict as
  the value.

- Add optional ``max_age`` keyword value to the ``remember`` method of
  ``repoze.bfg.authentication.AuthTktAuthenticationPolicy``; if this
  value is passed to ``remember``, the generated cookie will have a
  corresponding Max-Age value.

Documentation
-------------

- Add information to the URL Dispatch narrative documentation about
  path pattern matching syntax.

Bug Fixes
---------

- Make ``route_url`` URL-quote segment replacements during generation.
  Remainder segments are not quoted.

1.0a3 (2009-06-24)
==================

Implementation Changes
----------------------

- ``repoze.bfg`` no longer relies on the Routes package to interpret
  URL paths.  All known existing ``path`` patterns will continue to
  work with the reimplemented logic, which lives in
  ``repoze.bfg.urldispatch``.  ``<route>`` ZCML directives which use
  certain attributes (uncommon ones) may not work (see "Backwards
  Incompatibilities" below).

Bug Fixes
---------

- ``model_url`` when passed a request that was generated as a result
  of a route match would fail in a call to ``route.generate``.

- BFG-on-GAE didn't work due to a corner case bug in the fallback
  Python implementation of ``threading.local`` (symptom:
  "Initialization arguments are not supported").  Thanks to Michael
  Bernstein for the bug report.

Documentation
-------------

- Added a "corner case" explanation to the "Hybrid Apps" chapter