@@ -1,27 +1,32 @@
 import os
 import sys
+import pkg_resources
 
-def caller_path(path, level=2, package_globals=None): # package_globals==testing
+def caller_path(path, level=2):
     if not os.path.isabs(path):
-
-        if package_globals is None:
-            package_globals = sys._getframe(level).f_globals
-
-        if '__bfg_abspath__' in package_globals:
-            return os.path.join(package_globals['__bfg_abspath__'], path)
-
-        # computing the abspath is actually kinda expensive so we
-        # memoize the result
-        package_name = package_globals['__name__']
-        package = sys.modules[package_name]
-        prefix = package_path(package)
-        try:
-            package_globals['__bfg_abspath__'] = prefix
-        except:
-            pass
+        module = caller_module(level+1)
+        prefix = package_path(module)
         path = os.path.join(prefix, path)
     return path
 
-def package_path(package):
-    return os.path.abspath(os.path.dirname(package.__file__))
+def caller_module(level=2):
+    module_globals = sys._getframe(level).f_globals
+    module_name = module_globals['__name__']
+    module = sys.modules[module_name]
+    return module
 
+def package_path(package):
+    # computing the abspath is actually kinda expensive so we memoize
+    # the result
+    prefix = getattr(package, '__bfg_abspath__', None)
+    if prefix is None:
+        prefix = pkg_resources.resource_filename(package.__name__, '')
+        # pkg_resources doesn't care whether we feed it a package
+        # name or a module name within the package, the result
+        # will be the same: a directory name to the package itself
+        try:
+            package.__bfg_abspath__ = prefix
+        except:
+            # this is only an optimization, ignore any error
+            pass
+    return prefix
