@@ -1,3 +1,12 @@
+Next release
+============
+
+Features
+--------
+
+- Use the ``pkg_resources`` API to locate template filenames instead
+  of dead-reckoning using the ``os.path`` module.
+
 1.0a4 (2009-06-25)
 ==================
 
